# Fraudhunter

./: .env  .env.example  .gitattributes  .gitignore  AGENT.md  README.md  dev.py  docker-compose.yml  pyproject.toml  refactor_plan.md  render.yaml  start.bat  start.sh
backend/: README.md  alembic.ini  drain_queue.py  pyproject.toml
backend/Docs/: doc_05_api_part4.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_ipua_date_ip_ua_index.py  0003_add_job_runs.py  0004_add_persisted_findings.py  0005_add_findings_lineage.py  0006_add_job_run_controls.py  0007_add_settings_versions_and_findings_generations.py  0008_add_job_run_concurrency.py  0009_add_findings_search_indexes.py  0010_drop_click_findings.py  0011_add_acs_native_fraud.py  (+6 more)
backend/examples/: e2e_full_flow.py  local_example.py
backend/tests/: business-test-scenarios.md  conftest.py  test_acs_client_behavior.py  test_api_behavior.py  test_api_presenters_behavior.py  test_cli_behavior.py  test_config_behavior.py  test_console_api_behavior.py  test_conversion_burst.py  test_db_session_behavior.py  test_dev_runner_behavior.py  test_findings_lineage_behavior.py  test_fraud_detector_behavior.py  test_fraud_service_behavior.py  test_ingestion_behavior.py  test_job_status_pg_behavior.py  test_jobs_behavior.py  test_lifecycle_behavior.py  test_migrations_behavior.py  test_postgres_smoke.py  test_refresh_detect.py  test_reporting_behavior.py  test_repository.py  test_repository_behavior.py  test_repository_behavior_extra.py  test_repository_split_behavior.py  test_runtime_guards_behavior.py  test_service_protocol_behavior.py  test_settings_behavior.py  test_settings_rules.py  test_suspicious.py  test_suspicious_behavior.py  test_time_utils_behavior.py  test_utf8_guard_behavior.py
(+313 files in other folders)
